# AlgVisuales

./: CMakeLists.txt  CompilarYEjecutar.sh  EjecutarPrograma.sh  MakeClean.sh  README.md  readme-ai.md  setup.sh
include/: graphalgorithms.h  gridcell.h  mainwindow.h  pathfindercontroller.h
src/: graphalgorithms.cpp  gridcell.cpp  main.cpp  mainwindow.cpp  pathfindercontroller.cpp
